--- a/Draw/Controller/MusicSettings/MusicSettingController.xib
+++ b/Draw/Controller/MusicSettings/MusicSettingController.xib
@@ -206,9 +206,9 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">个性化音乐下载</string>
-						<object class="NSColor" key="IBUITextColor" id="735950790">
+						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<bytes key="NSRGB">MC4zNTY4NjI3NDUxIDAuNTA1ODgyMzUyOSAwLjcyNTQ5MDE5NjEAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -237,7 +237,10 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">展开</string>
 						<reference key="IBUIHighlightedTitleColor" ref="647944622"/>
-						<reference key="IBUINormalTitleColor" ref="735950790"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4zNTY4NjI3NDUxIDAuNTA1ODgyMzUyOSAwLjcyNTQ5MDE5NjEAA</bytes>
+						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="723860816"/>
 						<reference key="IBUIFontDescription" ref="85891485"/>
 						<reference key="IBUIFont" ref="137989913"/>
